[metadata]
name = xlog-pkg-XENITH
version = 0.0.4.post1
author = XenithMusic
description = A logging library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XenithMusic/xlog/
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
	Operating System :: Microsoft :: Windows
	Development Status :: 3 - Alpha
[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
